--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,17 @@ a {
     font-size: 24px;
 }
 
-.header, .footer {
+.header, .footer, .section1 {
     background-color: #1F2937;
+}
+
+.section1 h1 {
+    font-size: 48px;
+    font-style: extra-bold;
+    color: #F9FAF8;
+}
+
+.section1 p {
+    color: #E5E7EB;
+    font-size: 18px;
 }
