--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,8 @@ a {
 .header {
     display: flex;
     justify-content: space-between;
-    padding: 5px 100px;
+    padding: 5px 200px;
+    color: #F9FAF8;
 }
 
 .header-logo {
@@ -46,9 +47,148 @@ a {
     font-size: 48px;
     font-style: extra-bold;
     color: #F9FAF8;
+    margin: 0;
+    padding: 0;
 }
 
 .section1 p {
     color: #E5E7EB;
     font-size: 18px;
+    margin: 0 0 10px 0;
+    padding: 0;
+}
+
+.section1 {
+    padding: 70px 200px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: 40px;
+    
+}
+
+.section1-2 {
+    width: 450px;
+    height: 200px;
+    
+}
+
+.section1-1 {
+    width: 450px;
+    
+}
+
+button {
+    background-color: #3882F6;
+    border-radius: 5px;
+    color: #F9FAF8;
+    height: 30px;
+    width: 100px;
+}
+
+.section2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 30px 0 80px 0;
+}
+
+.section2 h2 {
+    color: #1F2937;
+    font-size: 32px;
+    font-style: extra-bold;
+    margin: 0;
+    padding: 0 0 30px 0;
+}
+
+.card-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 40px;
+    color: #1F2937
+}
+
+.card-and-text-container {
+    display: flex;
+    flex-direction: column;
+    font-size: 14px;
+    width: 150px;
+    gap: 5px;
+    text-align: center;
+}
+
+.card {
+    border: 3px solid #3882F6;
+    border-radius: 10px;
+    width: 150px;
+    height: 150px;
+}
+
+.section3 {
+    background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    padding: 75px 245px;
+}
+
+.section3 div:first-child {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 300;   
+    color: #1F2937 
+}
+
+.section3 div:last-child {
+    font-weight: 700;
+    align-self: flex-end;
+}
+
+.call-to-action-container {
+    display: flex;
+    background-color: #3882F6;
+    border-radius: 5px;
+    width: 800px;
+    height: 100px;
+    justify-content: space-between;
+    align-content: center;
+    padding: 0 100px;
+}
+
+.text-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.section4 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #F9FAF8;
+    padding: 80px;
+}
+
+.section4 button {
+    border: 3px solid #F9FAF8;
+    align-self: center;
+}
+
+.call-to-action {
+    font-weight: 700;
+    padding: 0;
+    margin: 0;
+}
+
+.section4 p {
+    padding: 0;
+    margin: 0;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 25px;
+    color: #F9FAF8;
+    font-size: small;
 }
